# local-agent-model

./: .gitignore  README.md  pyproject.toml
script/: prepare_agent_action.py  prepare_dataset.py  test.py  train_lora.py
scripts/: quantize_model.py  test_deepseek_r1.py  test_llama4.py  test_llama_31.py  test_qwen_25.py  train_deepseek_r1.py  train_qwen_25.py
utils/: save_best_model.py
